Bug 62095 - FILEOPEN: Simple xlsx file causes calc hang
Summary: FILEOPEN: Simple xlsx file causes calc hang
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: Other Linux (All)
: high major
Assignee: Not Assigned
URL:
Whiteboard: BSA target:5.1.0 target:5.0.0.0.beta4
Keywords: haveBacktrace
Depends on:
Blocks:
 
Reported: 2013-03-10 10:58 UTC by Mikhail Vladimirov
Modified: 2016-10-25 19:24 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
xlsx file in Russian with several spreadsheets (It was made in MS Office 2007) (730.53 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2013-03-10 10:58 UTC, Mikhail Vladimirov
Details
gdbtrace (4.20 KB, application/gzip)
2015-01-09 19:15 UTC, raal
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mikhail Vladimirov 2013-03-10 10:58:09 UTC
Created attachment 76264 [details]
xlsx file in Russian with several spreadsheets (It was made in MS Office 2007)

Problem description: xlsx file is not opened by calc

Steps to reproduce:
1. Try to open attachment
2. ....
3. ....

Current behavior: LO4 hangs

Expected behavior: Open file

              
Operating System: Debian
Version: 4.0.1.2 release
Comment 1 ntrrgc 2013-04-10 13:42:06 UTC
I can confirm this.

By the way, links of step 2 are broken. Well, one links a diff of a Makefile, I'm not sure why you would have done that.
Comment 2 ntrrgc 2013-04-10 13:53:03 UTC
After some minutes (I didn't measured it) the file finally opened, so it's not a deadlock.

Anyway, it's a bug since it shouldn't take so long to open.
Comment 3 Joel Madero 2015-01-06 21:08:20 UTC
Updating:
Ubuntu 14.04 x64
LibreOffice 3.3 (inherited from OOo) - updating version as version is oldest version confirmed on)
LibreOffice 4.4 beta 2 - same problem


Notes:
Opens fine in MSO 2010/2013
Opens fine in LibreOffice when saved as .xls from MSO
All three sheets hang independently (saved each sheet individually, hang on all of them)

Changing Priority:
Major - complete freeze/hang...no clue how long it takes to open but it seems to be a pretty basic spreadsheet.
High - default, seems appropriate
Comment 4 raal 2015-01-09 19:15:54 UTC
Created attachment 112025 [details]
gdbtrace
Comment 5 Commit Notification 2015-06-12 12:38:59 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f6a9b58bc72c1918f965043035dd1c04a0772820

tdf#62095 fix O(n^2) algorithm in opening pathological file

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2015-06-12 12:40:24 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=5158187bd76e45ac0b15754a099f034f6c78387f&h=libreoffice-5-0

tdf#62095 fix O(n^2) algorithm in opening pathological file

It will be available in 5.0.0.0.beta4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.