tdf#62095 fix O(n^2) algorithm in opening pathological file

with tons of missing styles

Change-Id: I93c41f1e461a6e148e9f4c1dd84a598ca0090b54